syntax = "proto3";
package ProtoMessage;

//获取配置信息
message C2S_1001{
    int32 MobileType = 1;
    string CurVersion = 2;
}

message S2C_1001 {
	string VersionTotal = 1;
	string VersionPatch = 2;
	bool IsAppStorePass = 3;
	string FirUrl = 4;
	string ApkUrl = 5;
	string Doname = 6;
	string FixIp = 7;
}

//游客登录
message C2S_1003{
    int32 MobileType = 1;
    string DeviceId = 2;
}

message S2C_1003{
	int64 UserId = 1;
	string Token = 2;
	string LoginIP = 3;
	int32 LoginPort = 4;
	string GateIP = 5;
	int32 GatePort = 6;
	string ApiIP = 7;
	int32 ApiPort = 8;
}